--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      <a href="https://forms.gle/28teU9Y98QxkRnwKA">Паста для бутербродов</a><br/>
      <a href="https://forms.gle/7wh3wmDuD9iShPVA7">Первые блюда</a><br/>
      <a href="https://forms.gle/okXBTSvz1vNvCywSA">Вторые блюда</a><br/>
+     <a href="https://forms.gle/S2R3Db7SojPrbVqPA">Соусы для разных блюд</a><br/>
      <a href="https://forms.gle/97cgfFMRW2aiYGjZ7">Начинки для пирогов и пельменей</a><br/>
      <a href="https://forms.gle/Qhso3fhphvDGtQWv7">Сладкие блюда</a>
   </body>
