--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
 <html>
   <head>
-    <title>Опросы эко-кафе</title>
+    <title>Viktor Zelinskii's site</title>
   </head>
   <body>
-     Опросы:<br/>
-     <a href="https://forms.gle/y18bf7h3zBpsvEiC6" target = '_blank'>Напитки</a><br/>
-     <a href="https://forms.gle/8oq7SnekSJXmKAuD9" target = '_blank'>Коктейли и пюре</a><br/>
-     <a href="https://forms.gle/qdZ2QzSqRLHHZBvv7" target = '_blank'>Салаты и винегреты</a><br/>
-     <a href="https://forms.gle/28teU9Y98QxkRnwKA" target = '_blank'>Паста для бутербродов</a><br/>
-     <a href="https://forms.gle/7wh3wmDuD9iShPVA7" target = '_blank'>Первые блюда</a><br/>
-     <a href="https://forms.gle/okXBTSvz1vNvCywSA" target = '_blank'>Вторые блюда</a><br/>
-     <a href="https://forms.gle/S2R3Db7SojPrbVqPA" target = '_blank'>Соусы для разных блюд</a><br/>
-     <a href="https://forms.gle/97cgfFMRW2aiYGjZ7" target = '_blank'>Начинки для пирогов и пельменей</a><br/>
-     <a href="https://forms.gle/Qhso3fhphvDGtQWv7" target = '_blank'>Сладкие блюда</a>
   </body>
 </html>
